--- a/workshops/LPC_EFT_workshop_2025/Parameter_Fitting_with_Systematics.ipynb
+++ b/workshops/LPC_EFT_workshop_2025/Parameter_Fitting_with_Systematics.ipynb
@@ -15,25 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "c0e93500-7a31-4aed-8fec-876e95144d25",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
-      "  hep.set_style(\"ATLAS\")\n",
-      "2025-06-26 19:45:34.536350: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1750967134.549943  133549 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1750967134.553994  133549 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-06-26 19:45:34.569565: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys, importlib\n",
     "# sys.path.append('../')\n",
@@ -68,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "2911a387-09ea-44da-ad82-f19e960a9129",
    "metadata": {},
    "outputs": [],
@@ -79,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "dfeaa3c6-560a-46fd-ac40-13ebb6877300",
    "metadata": {},
    "outputs": [
@@ -100,7 +85,6 @@
     "path_saved_data = config['path_saved_data']\n",
     "saved_data = f'{path_prefix}{path_saved_data}'\n",
     "\n",
-    "top_path = f'{path_prefix}{path_saved_data}output_training_nominal/'\n",
     "\n",
     "# Get the dictionary of labels to processes\n",
     "labels_dict = config[\"labels_dict\"]\n",
@@ -125,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "b2b11240-e39f-43f8-971d-97a8424d7084",
    "metadata": {},
    "outputs": [
@@ -134,8 +118,7 @@
      "output_type": "stream",
      "text": [
       "/tmp/ipykernel_133549/3818765506.py:12: FutureWarning: Series.ravel is deprecated. The underlying array is already 1D, so ravel is not necessary.  Use `to_numpy()` for conversion to a numpy array instead.\n",
-      "  weights_Asimov = jnp.array(dataset[mask_Asimov].weights.ravel())\n",
-      "No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+      "  weights_Asimov = jnp.array(dataset[mask_Asimov].weights.ravel())\n"
      ]
     }
    ],
@@ -156,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "15158bde-85fb-4cc8-8c4d-c6fae12bfe6e",
    "metadata": {},
    "outputs": [
@@ -198,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "f0e20915",
    "metadata": {},
    "outputs": [],
@@ -214,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "680f8528-3083-4a0e-a657-476e83e9d06d",
    "metadata": {},
    "outputs": [],
@@ -230,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "31d38dda-bc18-4c2f-aa4b-db75561d79df",
    "metadata": {},
    "outputs": [],
@@ -241,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "a8ae6415-7f12-4dfb-b30c-e023601aea0a",
    "metadata": {},
    "outputs": [],
@@ -251,28 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "f14e6af3-17ec-4823-9d78-5519585f5849",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './output_training_nominal/output_ratios_ttbar/ratio_ttbar.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m process_type \u001b[38;5;129;01min\u001b[39;00m mix_model_hypotheses:\n\u001b[1;32m     11\u001b[0m     path_to_ratio \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtop_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124moutput_ratios_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprocess_type\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/ratio_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprocess_type\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 12\u001b[0m     ratios[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSR\u001b[39m\u001b[38;5;124m'\u001b[39m][process_type] \u001b[38;5;241m=\u001b[39m jnp\u001b[38;5;241m.\u001b[39marray(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_to_ratio\u001b[49m\u001b[43m)\u001b[49m[mask_Asimov])\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m process \u001b[38;5;129;01min\u001b[39;00m all_process:\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m process \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mix_model_hypotheses:\n",
-      "File \u001b[0;32m~/.conda/envs/NSBI/lib/python3.11/site-packages/numpy/lib/npyio.py:427\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    425\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    426\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 427\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos_fspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    428\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    430\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './output_training_nominal/output_ratios_ttbar/ratio_ttbar.npy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the saved density ratios\n",
     "\n",
     "# Save paths\n",
-    "top_path = f'{path_prefix}output_training_nominal/'\n",
+    "# top_path = f'{path_prefix}output_training_nominal/'\n",
+    "top_path = f'{path_prefix}{path_saved_data}output_training_nominal/'\n",
+    "\n",
     "\n",
     "ratios = {}\n",
     "ratios['SR'] = {}\n",
@@ -290,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "f7b73975-89b1-4c25-8f5b-0f7dd9920db1",
    "metadata": {},
    "outputs": [],
@@ -300,39 +272,12 @@
     "# Save paths\n",
     "top_path = f'{path_prefix}output_training_systematics/'\n",
     "\n",
-    "\n",
-    "ratios_var_1sigma = {}\n",
-    "\n",
-    "for process in all_process:\n",
-    "\n",
-    "    ratios_var_1sigma[process] = {}\n",
-    "    \n",
-    "    for syst in dict_systs:\n",
-    "\n",
-    "        ratios_var_1sigma[process][syst] = {}\n",
-    "\n",
-    "        for direction in dict_systs[syst]['directions']:\n",
-    "\n",
-    "            if process not in dict_systs[syst]['process']:\n",
-    "                # Trivially set the variations to 1.0 when systematics do not affect process\n",
-    "                ratios_var_1sigma[process][syst][direction] = jnp.array(np.ones_like(ratios['SR']['ttbar']))\n",
-    "                \n",
-    "                if 'dn' not in dict_systs[syst]['directions']:\n",
-    "                    ratios_var_1sigma[process][syst]['dn'] = 2.0 - ratios_var_1sigma[process][syst]['up']\n",
-    "                \n",
-    "            else:\n",
-    "                path_to_ratios = f'{top_path}output_ratios_{process}_{syst}_{direction}/'\n",
-    "                ratio_file_path = f'{path_to_ratios}ratio_{syst}_{direction}.npy'\n",
-    "                ratios_var_1sigma[process][syst][direction] = np.load(ratio_file_path)\n",
-    "                # ratios_var_1sigma[process][syst][direction] = jnp.ones_like(ratios['SR']['ttbar'])\n",
-    "\n",
-    "                if 'dn' not in dict_systs[syst]['directions']:\n",
-    "                    ratios_var_1sigma[process][syst]['dn'] = 2.0 - ratios_var_1sigma[process][syst]['up']"
+    "ratios_var_1sigma = None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "00b29c86-6ac0-426d-9d2d-94d33b4b31fa",
    "metadata": {},
    "outputs": [
@@ -340,16 +285,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'SR': {'htautau': 844.6183, 'ttbar': 5317.6255, 'ztautau': 339302.88}, 'SR_binned': {'htautau': array([4.7001405], dtype=float32), 'ztautau': array([33.668922], dtype=float32), 'ttbar': array([1.3680663], dtype=float32)}, 'CR': {'htautau': array([3.4308802e-02, 1.9245273e+00, 1.4397985e+01, 1.4372072e+02],\n",
-      "      dtype=float32), 'ztautau': array([2.6406991e+00, 2.5416725e+02, 1.9917854e+04, 6.4259150e+05],\n",
-      "      dtype=float32), 'ttbar': array([  110.26796,  8016.983  , 20536.422  ,  9058.744  ], dtype=float32)}}\n"
+      "{'SR': {'htautau': 844.6958, 'ttbar': 5319.342, 'ztautau': 339464.62}, 'SR_binned': {'htautau': array([4.6968017], dtype=float32), 'ztautau': array([33.668922], dtype=float32), 'ttbar': array([1.3972166], dtype=float32)}, 'CR': {'htautau': array([3.3624213e-02, 1.9211941e+00, 1.4387957e+01, 1.4366057e+02],\n",
+      "      dtype=float32), 'ztautau': array([2.6406991e+00, 2.5416725e+02, 1.9863061e+04, 6.4248388e+05],\n",
+      "      dtype=float32), 'ttbar': array([  110.12221,  8006.1504 , 20541.977  ,  9062.424  ], dtype=float32)}}\n"
      ]
     }
    ],
    "source": [
-    "# # Load the Control Region summary histogram\n",
-    "# with open(f\"{saved_data}hist_channels[channel].pkl\", \"rb\") as fp:\n",
-    "#     hist_channels[channel] = pickle.load(fp)\n",
     "\n",
     "for channel in channels_binned:\n",
     "    with open(f\"{saved_data}hist_binned_{channel}.pkl\", \"rb\") as fp:\n",
@@ -357,36 +299,17 @@
     "\n",
     "    hist_channels_data[channel] = np.sum([hist_channels[channel][process_type] for process_type in process_asimov], axis=0)\n",
     "\n",
-    "print(hist_channels)\n",
-    "\n",
-    "# hist_channels[channel] = {}\n",
-    "\n",
-    "# for process in hist_channels[channel]:\n",
-    "#     hist_channels['CR'][process] = jnp.array(hist_channels[channel][process])"
+    "print(hist_channels)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "d0636f68-84e7-40b3-96fc-283c3eba269a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "for channel in channels_binned:\n",
-    "\n",
-    "    hist_channel_variations[channel] = {}\n",
-    "    \n",
-    "    # convert every array to JAX numpy arrays\n",
-    "    for process in all_process:\n",
-    "        hist_channel_variations[channel][process] = {}\n",
-    "        for direction in ['up', 'dn']:\n",
-    "            hist_channel_variations[channel][process][direction] = np.full((len(list_syst), \n",
-    "                                                                        len(hist_channels[channel][process])), 1.0)\n",
-    "            \n",
-    "            for count, syst in enumerate(list_syst):\n",
-    "                hist_channel_variations[channel][process][direction][count] = jnp.array(hist_variations[channel][process][syst][direction])\n",
-    "            "
+    "hist_channel_variations = None"
    ]
   },
   {
@@ -396,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratio_variations = {}\n",
+    "ratio_variations = None\n",
     "ratio_variations['SR'] = {}\n",
     "\n",
     "# convert every array to JAX numpy arrays\n",
