--- a/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -12,7 +12,14 @@
     "\n",
     "$$p(x|\\mu, \\alpha) = \\frac{1}{\\nu(\\mu, \\alpha)} \\sum_c f_c(\\mu) \\cdot \\nu_c(\\alpha) \\cdot p_c\\left(x|\\alpha\\right)$$\n",
     "\n",
-    "where $c$ stands for the various physics channels that contribute to the final state $x$, $\\mu$ is the signal-strength parameter and $\\alpha$ is the vector of nuisance parameters associated with the various systematic uncertainties in the model. Note that we are assuming that the parameter $\\mu$-dependence is known analytically and that we have simulation models for each of the channels $p_c(x)$. \n",
+    "where $c$ stands for the various physics channels that contribute to the final state $x$, **$\\mu$ is the signal-strength parameter and $\\alpha$ is the vector of nuisance parameters associated with the various systematic uncertainties in the model**. Note that we are assuming that the parameter $\\mu$-dependence is known analytically and that we have simulation models for each of the channels $p_c(x)$. \n",
+    "\n",
+    "This is almost always the case for EFT measurements - for example:\n",
+    "\n",
+    "$$p(x|\\mu, \\alpha) = \\frac{1}{\\nu(\\mu, \\alpha)} \\left[ \\nu_{SM}(\\alpha) \\cdot p_{SM}\\left(x|\\alpha\\right) +  \\frac{c}{\\Lambda^2} \\cdot \\nu^\\text{SM-int}_c(\\alpha) \\cdot p^\\text{SM-int}_c\\left(x|\\alpha\\right) +  \\frac{c^2}{\\Lambda^4} \\cdot \\nu^\\text{quad}_c(\\alpha) \\cdot p^\\text{quad}_c\\left(x|\\alpha\\right) \\right]$$\n",
+    "\n",
+    "Setting up the test\n",
+    "-\n",
     "\n",
     "The objective is to build the test statistic for composite hypothesis testing:\n",
     "\n",
@@ -31,13 +38,16 @@
     "\n",
     "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\sum_c G_c(\\alpha) \\cdot f_c(\\mu) \\cdot \\nu_c} \\sum_c f_c(\\mu) \\cdot G_c(\\alpha)\\cdot \\nu_c \\cdot g_c(x|\\alpha) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}$$\n",
     "\n",
-    "**Factorized approach:**\n",
+    "Factorized approach:\n",
+    "--\n",
     "\n",
     "Instead of training NNs parameterized on $\\mu$ and $\\alpha$, we use analytical parameterizations to simplify the problem to training only parameter-independent density ratios.\n",
     "\n",
-    "Let's set this up for the toy ttbar model we are using. Neglecting the nuisance parameter dependence for now, \n",
+    "Let's set this up for the toy $H\\to \\tau\\tau$ model we are using. **Neglecting the nuisance parameter dependence, the probability model can be written as** \n",
     "\n",
-    "$$\\sum_c \\left[f_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}\\right] = \\mu \\cdot \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)} + \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{ref}(x)} + \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)}$$"
+    "$$\\sum_c \\left[f_c(\\mu) \\cdot \\nu_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}\\right] = \\mu \\cdot \\nu_{H \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)} + \\nu_{t\\bar{t}}(\\mu) \\cdot  \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{ref}(x)} + \\nu_{Z \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)}$$\n",
+    "\n",
+    "In this tutorial, we will use a model independent of the NPs $\\alpha$ - the estimation of which is factorized in the kind of technique presented here. For a more complete workflow with systematics, you can work the notebooks in the base repository [link](https://github.com/iris-hep/NSBI-workflow-tutorial/tree/main/FAIR_universe_Higgs_tautau)."
    ]
   },
   {
@@ -50,14 +60,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "/home/jsandesara_umass_edu/.conda/envs/NSBI/lib/python3.11/site-packages/nsbi_common_utils/plotting.py:11: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-06-27 10:52:36.658285: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-06-27 12:41:49.908336: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-06-27 12:41:51.202716: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1751021556.675741    1719 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1751021556.681163    1719 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-06-27 10:52:36.699335: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "E0000 00:00:1751028111.588618 1251211 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1751028111.704207 1251211 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-06-27 12:41:52.910421: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -272,7 +283,7 @@
     "\n",
     "The density ratios need to be trained on phase space regions with support for the reference hypothesis $p_{ref}(x) > 0$.\n",
     "\n",
-    "To ensure this, we make a selection that selects events in the phase space regions with $p_{ref}(x) > 0$, or $p_c(x) \\gg p_{ref}(x)$, and only perform the NSBI fit in this selected analysis region. **A natural choice for the reference hypothesis is then the signal-rich hypotheses**. This is referred to in the ATLAS publications as the Search-Oriented Mixture Models approach: \n",
+    "To ensure this, we make a selection that selects events in the phase space regions with $p_{ref}(x) > 0$, and only perform the NSBI fit in this selected analysis region. **A natural choice for the reference hypothesis is then the signal-rich hypotheses**. This is referred to in the ATLAS publications as the Search-Oriented Mixture Models approach: \n",
     "\n",
     "$$p_{ref}(x) = \\frac{1}{\\sum_S \\nu_S} \\sum_S \\frac{d\\sigma_S}{dx} = \\frac{1}{\\nu_{H \\to \\tau\\tau}} \\frac{d\\sigma_{H \\to \\tau\\tau}}{dx}$$\n",
     "\n",
@@ -536,9 +547,13 @@
     "Signal and Control Regions\n",
     "===\n",
     "\n",
-    "The high signal over background phase space towards the right of the preselection cut shown above will be categorized as the **Signal Region** where the NSBI analysis is performed.\n",
+    "The preselection cuts isolate a background rich region, a region with large number of signal events mixed into the background, as well as a signal-dominant region. \n",
     "\n",
-    "The low signal phase space towards the left will be used as a **Control Region**, with typical uses such as background estimation, pre-unblinding data-MC checks, etc. In this phase space, we will use a binned summary observable like in any traditional analysis."
+    "The low signal over background region towards the left of the lower preselection cut is categorized as the **Control Region**, with typical uses such as background estimation, pre-unblinding data-MC checks, etc. In this phase space, we will use a binned summary observable like in any traditional analysis.\n",
+    "\n",
+    "The high signal over background phase space towards the right of the upper preselection cut shown above will be categorized as the **Binned Signal Region**. The signal events in this phase space have negligible background statistics - so they cannot be used in an unbinned NSBI method. Fortunately, these signal events lie in the signal-like phase space and are thus easily identified with a binned preselection score observable.\n",
+    "\n",
+    "The region between the lower and upper preselection cuts is to be used as the **Signal Region**, where the NSBI analysis is performed. \n"
    ]
   },
   {
@@ -1308,11 +1323,11 @@
     "Systematic Uncertainty Modelling\n",
     "===\n",
     "\n",
-    "So far we have left out the nuisance parameter piece of the parameterized density ratio decomposition shown before:\n",
+    "We have left out the nuisance parameter piece of the parameterized density ratio decomposition shown before:\n",
     "\n",
     "$$g_c(x|\\alpha) = \\frac{p_c(x|\\alpha)}{p_c(x)}$$\n",
     "\n",
-    "which will be estimated in the `Systematic_Uncertainty_Estimation.ipynb` notebook."
+    "For a more complete workflow with systematics, you can work the notebooks in the base repository [link](https://github.com/iris-hep/NSBI-workflow-tutorial/tree/main/FAIR_universe_Higgs_tautau)."
    ]
   },
   {
@@ -1355,9 +1370,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NSBI",
+   "display_name": "Python [conda env:.conda-NSBI]",
    "language": "python",
-   "name": "nsbi"
+   "name": "conda-env-.conda-NSBI-py"
   },
   "language_info": {
    "codemirror_mode": {
