--- a/workshops/LPC_EFT_workshop_2025/Parameter_Fitting_with_Systematics.ipynb
+++ b/workshops/LPC_EFT_workshop_2025/Parameter_Fitting_with_Systematics.ipynb
@@ -564,9 +564,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NSBI",
+   "display_name": "Python [conda env:.conda-NSBI]",
    "language": "python",
-   "name": "nsbi"
+   "name": "conda-env-.conda-NSBI-py"
   },
   "language_info": {
    "codemirror_mode": {
