--- a/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/workshops/LPC_EFT_workshop_2025/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -8,46 +8,7 @@
     "Train Neural Networks to estimate Likelihood Ratios\n",
     "===\n",
     "\n",
-    "In this notebook we will setup the neural networks that train unbiased and low-variance density ratios to be then used for inference. The statistical model we have is: \n",
-    "\n",
-    "$$p(x|\\mu, \\alpha) = \\frac{1}{\\nu(\\mu, \\alpha)} \\sum_c f_c(\\mu) \\cdot \\nu_c(\\alpha) \\cdot p_c\\left(x|\\alpha\\right)$$\n",
-    "\n",
-    "where $c$ stands for the various physics channels that contribute to the final state $x$, **$\\mu$ is the signal-strength parameter and $\\alpha$ is the vector of nuisance parameters associated with the various systematic uncertainties in the model**. Note that we are assuming that the parameter $\\mu$-dependence is known analytically and that we have simulation models for each of the channels $p_c(x)$. \n",
-    "\n",
-    "This is almost always the case for EFT measurements - for example:\n",
-    "\n",
-    "$$p(x|\\mu, \\alpha) = \\frac{1}{\\nu(\\mu, \\alpha)} \\left[ \\nu_{SM}(\\alpha) \\cdot p_{SM}\\left(x|\\alpha\\right) +  \\frac{c}{\\Lambda^2} \\cdot \\nu^\\text{SM-int}_c(\\alpha) \\cdot p^\\text{SM-int}_c\\left(x|\\alpha\\right) +  \\frac{c^2}{\\Lambda^4} \\cdot \\nu^\\text{quad}_c(\\alpha) \\cdot p^\\text{quad}_c\\left(x|\\alpha\\right) \\right]$$\n",
-    "\n",
-    "Setting up the test\n",
-    "-\n",
-    "\n",
-    "The objective is to build the test statistic for composite hypothesis testing:\n",
-    "\n",
-    "$$t_\\mu = -2 \\cdot \\frac{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\mu, \\hat{\\hat{\\alpha}})}{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\hat{\\mu}, \\hat{\\alpha})} -2 \\cdot \\sum_i^{\\mathcal{N}_\\text{evts}} w_i \\times \\log \\frac{p(x_i|\\mu, \\hat{\\hat{\\alpha}})}{p(x_i|\\hat{\\mu}, \\hat{\\alpha})} + \\sum_m^{N_\\text{systs}} \\alpha_m^2$$\n",
-    "\n",
-    "A direct approach would then be to model the probability density $p(x|\\mu, \\alpha)$ using NNs. But that is a more difficult task than training probability density ratios. We use a simple trick:\n",
-    "\n",
-    "$$t_\\mu = -2 \\cdot \\frac{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\mu, \\hat{\\hat{\\alpha}})}{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\hat{\\mu}, \\hat{\\alpha})} -2 \\cdot \\sum_i^{\\mathcal{N}_\\text{evts}} w_i \\times \\log \\frac{p(x_i|\\mu, \\hat{\\hat{\\alpha}})/p_{ref}(x)}{p(x_i|\\hat{\\mu}, \\hat{\\alpha})/p_{ref}(x)} + \\sum_m^{N_\\text{systs}} \\alpha_m^2$$\n",
-    "\n",
-    "\n",
-    "to turn this into a density ratio estimation problem:\n",
-    "\n",
-    "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\nu(\\mu, \\alpha)} \\sum_c f_c(\\mu) \\cdot \\nu_c(\\alpha) \\cdot \\frac{p_c\\left(x|\\alpha\\right)}{p_{ref}(x)}$$\n",
-    "\n",
-    "Factorizing out the $\\alpha$-dependence in the density ratios:\n",
-    "\n",
-    "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\sum_c G_c(\\alpha) \\cdot f_c(\\mu) \\cdot \\nu_c} \\sum_c f_c(\\mu) \\cdot G_c(\\alpha)\\cdot \\nu_c \\cdot g_c(x|\\alpha) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}$$\n",
-    "\n",
-    "Factorized approach:\n",
-    "--\n",
-    "\n",
-    "Instead of training NNs parameterized on $\\mu$ and $\\alpha$, we use analytical parameterizations to simplify the problem to training only parameter-independent density ratios.\n",
-    "\n",
-    "Let's set this up for the toy $H\\to \\tau\\tau$ model we are using. **Neglecting the nuisance parameter dependence, the probability model can be written as** \n",
-    "\n",
-    "$$\\sum_c \\left[f_c(\\mu) \\cdot \\nu_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}\\right] = \\mu \\cdot \\nu_{H \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)} + \\nu_{t\\bar{t}}(\\mu) \\cdot  \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{ref}(x)} + \\nu_{Z \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)}$$\n",
-    "\n",
-    "In this tutorial, we will use a model independent of the NPs $\\alpha$ - the estimation of which is factorized in the kind of technique presented here. For a more complete workflow with systematics, you can work the notebooks in the base repository [link](https://github.com/iris-hep/NSBI-workflow-tutorial/tree/main/FAIR_universe_Higgs_tautau)."
+    "In this notebook we will setup the neural networks that train unbiased and low-variance density ratios to be then used for inference. "
    ]
   },
   {
@@ -138,24 +99,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "522a660c-f84b-410c-883c-0aa642a3ff6e",
+   "metadata": {},
+   "source": [
+    "Statistical Model\n",
+    "-\n",
+    "\n",
+    "The statistical model we have is: \n",
+    "\n",
+    "$$p(x|\\mu, \\alpha) = \\frac{1}{\\nu(\\mu, \\alpha)} \\sum_c f_c(\\mu) \\cdot \\nu_c(\\alpha) \\cdot p_c\\left(x|\\alpha\\right)$$\n",
+    "\n",
+    "where $c$ stands for the various physics channels that contribute to the final state $x$, **$\\mu$ is the signal-strength parameter and $\\alpha$ is the vector of nuisance parameters associated with the various systematic uncertainties in the model**. Note that we are assuming that the parameter $\\mu$-dependence is known analytically and that we have simulation models for each of the channels $p_c(x)$. \n",
+    "\n",
+    "This is almost always the case for EFT measurements - for example:\n",
+    "\n",
+    "$$p(x|\\mu, \\alpha) = \\frac{1}{\\nu(\\mu, \\alpha)} \\left[ \\nu_{SM}(\\alpha) \\cdot p_{SM}\\left(x|\\alpha\\right) +  \\frac{c}{\\Lambda^2} \\cdot \\nu^\\text{SM-int}_c(\\alpha) \\cdot p^\\text{SM-int}_c\\left(x|\\alpha\\right) +  \\frac{c^2}{\\Lambda^4} \\cdot \\nu^\\text{quad}_c(\\alpha) \\cdot p^\\text{quad}_c\\left(x|\\alpha\\right) \\right]$$\n",
+    "\n",
+    "Setting up the test\n",
+    "-\n",
+    "\n",
+    "The objective is to build the test statistic for composite hypothesis testing:\n",
+    "\n",
+    "$$t_\\mu = -2 \\cdot \\frac{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\mu, \\hat{\\hat{\\alpha}})}{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\hat{\\mu}, \\hat{\\alpha})} -2 \\cdot \\sum_i^{\\mathcal{N}_\\text{evts}} w_i \\times \\log \\frac{p(x_i|\\mu, \\hat{\\hat{\\alpha}})}{p(x_i|\\hat{\\mu}, \\hat{\\alpha})} + \\sum_m^{N_\\text{systs}} \\alpha_m^2$$\n",
+    "\n",
+    "A direct approach would then be to model the probability density $p(x|\\mu, \\alpha)$ using NNs. But that is a more difficult task than training probability density ratios. We use a simple trick:\n",
+    "\n",
+    "$$t_\\mu = -2 \\cdot \\frac{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\mu, \\hat{\\hat{\\alpha}})}{\\text{Pois}(\\mathcal{N}_\\text{evts}|\\hat{\\mu}, \\hat{\\alpha})} -2 \\cdot \\sum_i^{\\mathcal{N}_\\text{evts}} w_i \\times \\log \\frac{p(x_i|\\mu, \\hat{\\hat{\\alpha}})/p_{ref}(x)}{p(x_i|\\hat{\\mu}, \\hat{\\alpha})/p_{ref}(x)} + \\sum_m^{N_\\text{systs}} \\alpha_m^2$$\n",
+    "\n",
+    "\n",
+    "to turn this into a density ratio estimation problem:\n",
+    "\n",
+    "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\nu(\\mu, \\alpha)} \\sum_c f_c(\\mu) \\cdot \\nu_c(\\alpha) \\cdot \\frac{p_c\\left(x|\\alpha\\right)}{p_{ref}(x)}$$\n",
+    "\n",
+    "Factorizing out the $\\alpha$-dependence in the density ratios:\n",
+    "\n",
+    "$$\\frac{p(x|\\mu, \\alpha)}{p_{ref}(x)} = \\frac{1}{\\sum_c G_c(\\alpha) \\cdot f_c(\\mu) \\cdot \\nu_c} \\sum_c f_c(\\mu) \\cdot G_c(\\alpha)\\cdot \\nu_c \\cdot g_c(x|\\alpha) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}$$\n",
+    "\n",
+    "Factorized approach:\n",
+    "--\n",
+    "\n",
+    "Instead of training NNs parameterized on $\\mu$ and $\\alpha$, we use analytical parameterizations to simplify the problem to training only parameter-independent density ratios.\n",
+    "\n",
+    "Let's set this up for the toy $H\\to \\tau\\tau$ model we are using. **Neglecting the nuisance parameter dependence ($G_c(\\alpha) = g_c(x|\\alpha) = 1$), the probability model can be written as** \n",
+    "\n",
+    "$$\\sum_c f_c(\\mu) \\cdot \\nu_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)} = \\mu \\cdot \\nu_{H \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)} + \\nu_{t\\bar{t}}(\\mu) \\cdot  \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{ref}(x)} + \\nu_{Z \\to \\tau\\tau}(\\mu) \\cdot  \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)}$$\n",
+    "\n",
+    "In this tutorial, we will use a model independent of the NPs $\\alpha$ - the estimation of which is factorized in the kind of technique presented here. For a more complete workflow with systematics, you can work the notebooks in the base repository [link](https://github.com/iris-hep/NSBI-workflow-tutorial/tree/main/FAIR_universe_Higgs_tautau)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d61d461f-5f65-4e57-875e-1e85f44fe9b5",
+   "id": "1ee20e88-f3c6-4731-9fcc-177116758a19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['htautau']\n",
+      "['ttbar', 'ztautau']\n"
+     ]
+    }
+   ],
    "source": [
-    "# If the preselection NN has already been trained and saved, load from the saved model\n",
-    "USE_SAVED_MODEL_PRESEL = True\n",
-    "\n",
-    "# If the preselection NN has already been trained and evaluated, load the numpy array of predictions\n",
-    "USE_SAVED_PRESEL_PREDICTIONS = False\n",
-    "\n",
-    "# Input features for training\n",
-    "features = config[\"features\"]\n",
-    "\n",
-    "# Subset of the features to standardize before training\n",
-    "features_scaling = config[\"features_scaling\"]\n",
-    "\n",
     "# Get the dictionary of labels to processes\n",
     "labels_dict = config[\"labels_dict\"]\n",
     "\n",
@@ -164,6 +172,34 @@
     "\n",
     "# Background processes in the model\n",
     "background_processes = config[\"background_processes\"]\n",
+    "\n",
+    "print(signal_processes)\n",
+    "print(background_processes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a80627c5-a251-4a68-bb07-ce38f59f048b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the nominal dataset saved from the pre-processing notebook\n",
+    "dataset_incl_nominal = pd.read_hdf(f\"{saved_data}df_nominal.h5\", key=\"dataset\", mode='r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d61d461f-5f65-4e57-875e-1e85f44fe9b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input features for training\n",
+    "features = config[\"features\"]\n",
+    "\n",
+    "# Subset of the features to standardize before training\n",
+    "features_scaling = config[\"features_scaling\"]\n",
     "\n",
     "# float factors multiplying the probabilities in the preselection score observable \n",
     "pre_factor_preselection_score = config[\"pre_factor_preselection_score\"]\n"
@@ -194,75 +230,8 @@
     }
    ],
    "source": [
+    "# The input features used in the modeling of the likelihood ratios\n",
     "features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "282c7d3e-6ca2-4c26-b44d-e31e72901d3b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['DER_mass_transverse_met_lep',\n",
-       " 'log_DER_mass_vis',\n",
-       " 'log_DER_pt_h',\n",
-       " 'DER_deltar_had_lep',\n",
-       " 'log_DER_pt_tot',\n",
-       " 'log_DER_sum_pt',\n",
-       " 'DER_pt_ratio_lep_had',\n",
-       " 'DER_met_phi_centrality']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features_scaling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "a80627c5-a251-4a68-bb07-ce38f59f048b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the nominal dataset saved from the pre-processing notebook\n",
-    "dataset_incl_nominal = pd.read_hdf(f\"{saved_data}df_nominal.h5\", key=\"dataset\", mode='r')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4bb41ed1-e053-4882-9f9f-c35b9f1b30f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the MC/data weights and training labels identifying different processes\n",
-    "weights = dataset_incl_nominal.weights.to_numpy()\n",
-    "train_labels = dataset_incl_nominal.train_labels.to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "88ec0ba6-b840-4d7d-a5bb-d7fca2cb946f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Normalizing the training weights - only discriminating shapes, not norms\n",
-    "weights_normed = weights.copy()\n",
-    "\n",
-    "for key in labels_dict:\n",
-    "\n",
-    "    weights_normed[train_labels==labels_dict[key]] /= weights[train_labels==labels_dict[key]].sum()\n",
-    "\n",
-    "dataset_incl_nominal['weights_normed'] = weights_normed\n"
    ]
   },
   {
@@ -342,6 +311,49 @@
     "\n",
     "where $P_c$ are the probability scores outputted from the softmax layer of the trained NN.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e981440f-0a46-45ab-a04f-1d1a7cd88e27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If the preselection NN has already been trained and saved, load from the saved model\n",
+    "USE_SAVED_MODEL_PRESEL = True\n",
+    "\n",
+    "# If the preselection NN has already been trained and evaluated, load the numpy array of predictions\n",
+    "USE_SAVED_PRESEL_PREDICTIONS = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4bb41ed1-e053-4882-9f9f-c35b9f1b30f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the MC/data weights and training labels identifying different processes\n",
+    "weights = dataset_incl_nominal.weights.to_numpy()\n",
+    "train_labels = dataset_incl_nominal.train_labels.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "88ec0ba6-b840-4d7d-a5bb-d7fca2cb946f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizing the training weights - only discriminating shapes, not norms\n",
+    "weights_normed = weights.copy()\n",
+    "\n",
+    "for key in labels_dict:\n",
+    "\n",
+    "    weights_normed[train_labels==labels_dict[key]] /= weights[train_labels==labels_dict[key]].sum()\n",
+    "\n",
+    "dataset_incl_nominal['weights_normed'] = weights_normed\n"
    ]
   },
   {
@@ -1342,30 +1354,6 @@
     "\n",
     "In the off-shell Higgs boson analysis, we used k-fold cross-validation, with k=10, to train an ensemble $N_{ens}\\sim 250$ of NNs per density ratio $p_c(x)/p_{ref}(x)$. The density ratios used in the final fit are always evaluated on the holdout dataset and by using each of the folds as holdout once, the entire model for $p_c(x)/p_{ref}(x)$ consists of $N_{ens}\\times k \\sim 2500$ NNs. Each NN in the ensemble is trained by resampling data without replacement from the k-1 folds used for training.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30a5dce9-2a7c-4c58-96e8-d0f31d1c53d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e64a3c1-d514-4174-8970-0916d8377609",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91803122-7878-46ca-b069-e80cee573293",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
